# NNGPP-JSON-COMMUNICATION

./: CMakeLists.txt  README.md  failed.json  success.json
dockerfiles/: Dockerfile.prod.x86_aarch64
src/: CMakeLists.txt  reqrep.cpp
